force-app/main/default/objects/Intake_Process__c/Intake_Process__c.object-meta.xml
<CustomObject>
    <label>Intake Process</label>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Intake Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>