force-app/main/default/objects/Intake_Process__c/fields/Any_Value__c.field-meta.xml
<CustomField>
    <fullName>Any_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that no specific value is required to progress to the next question</description>
    <label>Accept Any Value</label>
    <type>Checkbox</type>
</CustomField>