force-app/main/default/objects/Intake_Process__c/fields/Assign_Case_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_Case_To__c</fullName>
    <description>Based on the outcome, the case team queue can be updated as well</description>
    <label>Assign Case To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Team_Queue</valueSetName>
    </valueSet>
</CustomField>