force-app/main/default/objects/Intake_Process__c/fields/Assign_to_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Current_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Current User</label>
    <type>Checkbox</type>
</CustomField>