force-app/main/default/objects/Intake_Process__c/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Reason</valueSetName>
    </valueSet>
</CustomField>