force-app/main/default/objects/Intake_Process__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <label>Case Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interruption Case</fullName>
            </value>
            <value>
                <fullName>Modify Existing Service Case</fullName>
            </value>
            <value>
                <fullName>New Service Case</fullName>
            </value>
            <value>
                <fullName>Pickup Case</fullName>
            </value>
            <value>
                <fullName>Repair Case</fullName>
            </value>
            <value>
                <fullName>Service Request Case</fullName>
            </value>
            <value>
                <fullName>Standard Case</fullName>
            </value>
            <value>
                <fullName>Status Case</fullName>
            </value>
            <value>
                <fullName>Vendor Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>