force-app/main/default/objects/Intake_Process__c/fields/Create_Approval_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Approval_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the outcome created requires the creation of an approval task assigned to the current user</inlineHelpText>
    <label>Create Approval Task</label>
    <type>Checkbox</type>
</CustomField>