force-app/main/default/objects/Intake_Process__c/fields/Create_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to create a specific type of task (details specified within the record as well)</description>
    <inlineHelpText>Check when you need to create a task based on selecting this outcome</inlineHelpText>
    <label>Create Task</label>
    <type>Checkbox</type>
</CustomField>