force-app/main/default/objects/Intake_Process__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a customer account, not a location or vendor account.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <infoMessage>Customer Accounts only.  Use the location field to specify specific locations.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake Processes</relationshipLabel>
    <relationshipName>Intake_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>