force-app/main/default/objects/Intake_Process__c/fields/Customer_Asset__c.field-meta.xml
<CustomField>
    <fullName>Customer_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordType.Name</field>
            <operation>equals</operation>
            <value>Service Header</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Intake Processes</relationshipLabel>
    <relationshipName>Intake_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>