force-app/main/default/objects/Intake_Process__c/fields/Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Location Accounts Only</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake Processes (Location Account)</relationshipLabel>
    <relationshipName>Location_Intake_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>