force-app/main/default/objects/Intake_Process__c/fields/Customer_Project__c.field-meta.xml
<CustomField>
    <fullName>Customer_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Project</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please specify the project code header for this relationship</errorMessage>
        <filterItems>
            <field>Project_Code__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Project Code Header</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Code__c</referenceTo>
    <relationshipLabel>Intake Processes</relationshipLabel>
    <relationshipName>Intake_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>