force-app/main/default/objects/Intake_Process__c/fields/Input_Values__c.field-meta.xml
<CustomField>
    <fullName>Input_Values__c</fullName>
    <inlineHelpText>Enter your input values when the input type is &quot;Picklist&quot;.  Separate values with commas.</inlineHelpText>
    <label>Input Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>