force-app/main/default/objects/Intake_Process__c/fields/Intake_Question__c.field-meta.xml
<CustomField>
    <fullName>Intake_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Question</label>
    <referenceTo>Intake_Process__c</referenceTo>
    <relationshipLabel>Intake Outcomes</relationshipLabel>
    <relationshipName>Intake_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>