force-app/main/default/objects/Intake_Process__c/fields/Next_Question__c.field-meta.xml
<CustomField>
    <fullName>Next_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Question</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Intake_Process__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Intake Questions</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Intake_Process__c</referenceTo>
    <relationshipLabel>Intake Processes (Next Question)</relationshipLabel>
    <relationshipName>Caused_By</relationshipName>
    <type>Lookup</type>
</CustomField>