force-app/main/default/objects/Intake_Process__c/fields/Outcome_Statement__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Statement__c</fullName>
    <description>Your case is now configured!</description>
    <label>Outcome Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>