force-app/main/default/objects/Intake_Process__c/fields/Presentation_Order__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Order__c</fullName>
    <description>Question Sort Order</description>
    <inlineHelpText>The order in which the question should be presented in the flow for the user.  If not specified, there are no guarantees in how the questions will be sorted.</inlineHelpText>
    <label>Presentation Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>