force-app/main/default/objects/Intake_Process__c/fields/Queue_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Queue_Assigned__c</fullName>
    <label>Queue Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Team_Queue</valueSetName>
    </valueSet>
</CustomField>