force-app/main/default/objects/Intake_Process__c/fields/Task_Process__c.field-meta.xml
<CustomField>
    <fullName>Task_Process__c</fullName>
    <label>Task Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>