force-app/main/default/objects/Intake_Process__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm service completion</fullName>
            </value>
            <value>
                <fullName>Confirm service completion with location</fullName>
            </value>
            <value>
                <fullName>Confirm Vendor Availability</fullName>
            </value>
            <value>
                <fullName>Manually Dispatch</fullName>
            </value>
            <value>
                <fullName>Notify Customer of Decline</fullName>
            </value>
            <value>
                <fullName>Notify Customer of Delay</fullName>
            </value>
            <value>
                <fullName>Notify customer of service update</fullName>
            </value>
            <value>
                <fullName>Obtain Customer info</fullName>
            </value>
            <value>
                <fullName>Obtain Internal Response</fullName>
            </value>
            <value>
                <fullName>Obtain Schedule Confirmation</fullName>
            </value>
            <value>
                <fullName>Obtain Service Approval</fullName>
            </value>
            <value>
                <fullName>Obtain vendor update</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rejected Work Order</fullName>
            </value>
            <value>
                <fullName>Obtain Vendor Cost &amp; Serviceability</fullName>
            </value>
            <value>
                <fullName>Resolve Service Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>