force-app/main/default/objects/Intake_Process__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <label>Team Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Team_Name</valueSetName>
    </valueSet>
</CustomField>