force-app/main/default/objects/Intake_Process__c/fields/Update_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Update_Case_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Case Reason</label>
    <type>Checkbox</type>
</CustomField>