force-app/main/default/objects/Intake_Process__c/fields/Update_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Update_Case_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Case Record Type</label>
    <type>Checkbox</type>
</CustomField>