force-app/main/default/objects/Intake_Process__c/fields/Update_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Service_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether a date field is being collected to update the case service date</description>
    <label>Update Service Date</label>
    <type>Checkbox</type>
</CustomField>