force-app/main/default/objects/Intake_Process__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>Customer Service Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Service Representative</fullName>
                <label>Project Service Represenative</label>
            </value>
            <value>
                <fullName>Project_Service_Representative</fullName>
                <label>Disable-Project Service Represenative</label>
            </value>
            <value>
                <fullName>Customer Experience Representative</fullName>
            </value>
            <value>
                <fullName>Customer Experience Representative II</fullName>
            </value>
            <value>
                <fullName>Customer_Experience_Representative_II</fullName>
                <label>Disable-Customer Experience Representative II</label>
            </value>
            <value>
                <fullName>M&amp;I Customer Experience Representative</fullName>
            </value>
            <value>
                <fullName>Canada Customer Service Representative</fullName>
            </value>
            <value>
                <fullName>India Customer Experience Representative</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>National Account Manager</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>