force-app/main/default/objects/Intake_Process__c/recordTypes/Intake_Outcomes.recordType-meta.xml
<RecordType>
    <fullName>Intake_Outcomes</fullName>
    <active>true</active>
    <description>Outcomes of specific questions that have been defined.  An outcome cannot be created without specifying the question that it relates to.</description>
    <label>Intake Outcomes</label>
</RecordType>