force-app/main/default/objects/Intake_Process__c/recordTypes/Intake_Questions.recordType-meta.xml
<RecordType>
    <fullName>Intake_Questions</fullName>
    <active>true</active>
    <description>Questions, by case type, that may be dynamic based on customer details or user role.  A question is tied to one or more outcomes based on the value provided by the user.</description>
    <label>Intake Questions</label>
</RecordType>