force-app/main/default/objects/Intake_Process__c/recordTypes/Universal_Questions.recordType-meta.xml
<RecordType>
    <fullName>Universal_Questions</fullName>
    <active>false</active>
    <description>General questions, by case type, that should be asked every time a case is created.  These questions do not have dynamic outcomes, and are not tied to customers or specific user roles.</description>
    <label>Universal Questions</label>
</RecordType>