force-app/main/default/objects/Intake_Process__c/validationRules/Input_Values_for_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>Input_Values_for_Picklist</fullName>
    <active>true</active>
    <description>Restricts the use of input values when the input type is not picklist.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Input_Values__c)),NOT(ISPICKVAL( Input_Type__c , &apos;Picklist&apos;)))</errorConditionFormula>
    <errorMessage>You may not provide a list of values when the input type is not a picklist.</errorMessage>
</ValidationRule>